--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 </project>
